--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,11 @@
 name: Hank Quinlan, Horrible Cop
 markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
+collections:
+- authors:
+defaults:
+  - scope:
+      path: ""
+      type: authors
+    values:
+      layout: page
