--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ markdown: kramdown
 permalink: /blog/:year/:month/:day/:title
 collections:
 - authors:
+output: true
 defaults:
   - scope:
       path: ""
